fixed overly scaled emoji on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,12 @@ nav a:hover,
   border: 1px solid #000;
   border-radius: 10px;
   transition: ease-out .2s;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 #genButton:hover {
   color: #ffDC2A;
@@ -202,8 +208,7 @@ and (min-device-width : 320px)
 and (max-device-width : 480px)
 and (orientation : portrait) {
   #emojiBox {
-    -webkit-transform: scale(4);
-    line-height: 1.33rem;
+    line-height: 1.05;
     letter-spacing: 0;
   }
 }
@@ -213,8 +218,7 @@ and (min-device-width : 320px)
 and (max-device-width : 568px)
 and (orientation : portrait) {
   #emojiBox {
-    -webkit-transform: scale(4);
-    line-height: 1.33rem;
+    line-height: 1.05;
     letter-spacing: 0;
   }
 }
@@ -223,9 +227,14 @@ and (orientation : portrait) {
 and (min-device-width : 375px)
 and (max-device-width : 667px) {
   #emojiBox {
-    -webkit-transform: scale(4);
-    line-height: 1.33rem;
+    line-height: 1.05;
     letter-spacing: 0;
+  }
+
+  #genButton:hover {
+    color: #ffDC2A;
+    border: 1px solid #ffDC2A;
+    transition: ease-out .2s;
   }
 }
 
@@ -250,8 +259,7 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (-webkit-min-device-pixel-ratio: 1) {
   #emojiBox {
-    -webkit-transform: scale(4);
-    line-height: 1.33rem;
+    line-height: 1.05;
     letter-spacing: 0;
   }
 }
@@ -261,8 +269,8 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (-webkit-min-device-pixel-ratio: 1) {
   #emojiBox {
-    -webkit-transform: scale(4);
-    line-height: 1.33rem;
+
+    line-height: 1.05;
     letter-spacing: 0;
   }
 }
@@ -271,8 +279,8 @@ and (-webkit-min-device-pixel-ratio: 1) {
 and (min-device-width : 768px)
 and (max-device-width : 1024px) {
   #emojiBox {
-    -webkit-transform: scale(4);
-    line-height: 1.33rem;
+
+    line-height: 1.05;
     letter-spacing: 0;
   }
 }
@@ -282,8 +290,7 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (-webkit-min-device-pixel-ratio: 2) {
   #emojiBox {
-    -webkit-transform: scale(4);
-    line-height: 1.33rem;
+    line-height: 1.05;
     letter-spacing: 0;
   }
 }
